--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "add": "^2.0.6",
+    "isomorphic-fetch": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "remount": "^1.0.0",
     "typescript": "^5.0.4"
   }
