--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo-rails": "^7.3.0",
+    "@types/isomorphic-fetch": "^0.0.36",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "esbuild": "^0.17.16",
     "add": "^2.0.6",
     "isomorphic-fetch": "^3.0.0",
     "react": "^18.2.0",
@@ -9,5 +13,9 @@
     "react-router-dom": "^6.10.0",
     "remount": "^1.0.0",
     "typescript": "^5.0.4"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
+    "typecheck": "tsc --project tsconfig.json --noEmit --watch --preserveWatchOutput"
   }
 }
