--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "esbuild": "^0.17.16",
     "add": "^2.0.6",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
+    "esbuild": "^0.17.16",
     "isomorphic-fetch": "^3.0.0",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
