--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "add": "^2.0.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
+    "boring-avatars": "^1.7.0",
     "esbuild": "^0.17.16",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.4",
