--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "add": "^2.0.6",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.10.4",
     "boring-avatars": "^1.7.0",
     "esbuild": "^0.17.16",
@@ -16,6 +16,7 @@
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-timeago": "^7.1.0",
